syntax = "proto3";

package yandex.cloud.events.loadbalancer;

import "google/rpc/status.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/events/options.proto";
import "yandex/cloud/validation.proto";
import "yandex/cloud/loadbalancer/v1/target_group.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/loadbalancer;loadbalancer";
option java_package = "yandex.cloud.api.events.loadbalancer";

message CreateTargetGroup {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string target_group_id = 1 [(required) = true];
        string target_group_name = 2 [(required) = true];
        string region_id = 3 [(required) = true];
        repeated yandex.cloud.loadbalancer.v1.Target targets = 4;
    }
}

message UpdateTargetGroup {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string target_group_id = 1 [(required) = true];
        string target_group_name = 2 [(required) = true];
        string region_id = 3 [(required) = true];
        repeated yandex.cloud.loadbalancer.v1.Target targets = 4;
    }
}

message DeleteTargetGroup {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string target_group_id = 1 [(required) = true];
        string target_group_name = 2 [(required) = true];
    }
}

message AddTargetGroupTargets {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string target_group_id = 1 [(required) = true];
        string target_group_name = 2 [(required) = true];
        repeated yandex.cloud.loadbalancer.v1.Target targets = 3;
    }
}

message RemoveTargetGroupTargets {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string target_group_id = 1 [(required) = true];
        string target_group_name = 2 [(required) = true];
        repeated yandex.cloud.loadbalancer.v1.Target targets = 3;
    }
}
